--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "process": "^0.11.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.8.2",
     "socket.io-client": "^4.8.1",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.5"
